--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -1,65 +1,71 @@
-# Additional translations at https://github.com/heartcombo/devise/wiki/I18n
-
 en:
   devise:
     confirmations:
-      confirmed: "Your email address has been successfully confirmed."
-      send_instructions: "You will receive an email with instructions for how to confirm your email address in a few minutes."
-      send_paranoid_instructions: "If your email address exists in our database, you will receive an email with instructions for how to confirm your email address in a few minutes."
+      confirmed: "All set! Your email's been confirmed."
+      send_instructions: "Check your inbox for a confirmation email. It should arrive shortly!"
+      send_paranoid_instructions: "If we found your email, a confirmation message is on the way."
+
     failure:
-      already_authenticated: "You are already signed in."
-      inactive: "Your account is not activated yet."
-      invalid: "Invalid %{authentication_keys} or password."
-      locked: "Your account is locked."
-      last_attempt: "You have one more attempt before your account is locked."
-      not_found_in_database: "Invalid %{authentication_keys} or password."
-      timeout: "Your session expired. Please sign in again to continue."
-      unauthenticated: "You need to sign in or sign up before continuing."
-      unconfirmed: "You have to confirm your email address before continuing."
+      already_authenticated: "You're already logged in."
+      inactive: "Hang tight—your account still needs activation."
+      invalid: "Hmm... that %{authentication_keys} or password doesn’t look right."
+      locked: "Too many tries—your account is locked for now."
+      last_attempt: "Careful! One more try before your account locks."
+      not_found_in_database: "That %{authentication_keys} or password didn’t match anything we have."
+      timeout: "You’ve been away too long. Please sign in again."
+      unauthenticated: "Please log in or sign up to keep going."
+      unconfirmed: "You’ll need to confirm your email before accessing this part."
+
     mailer:
       confirmation_instructions:
-        subject: "Confirmation instructions"
+        subject: "Confirm your email"
       reset_password_instructions:
-        subject: "Reset password instructions"
+        subject: "Reset your password"
       unlock_instructions:
-        subject: "Unlock instructions"
+        subject: "Unlock your account"
       email_changed:
-        subject: "Email Changed"
+        subject: "Email changed"
       password_change:
-        subject: "Password Changed"
+        subject: "Password updated"
+
     omniauth_callbacks:
-      failure: "Could not authenticate you from %{kind} because \"%{reason}\"."
-      success: "Successfully authenticated from %{kind} account."
+      failure: "We couldn’t log you in from %{kind}. Reason: \"%{reason}\"."
+      success: "You're all set! Signed in with %{kind}."
+
     passwords:
-      no_token: "You can't access this page without coming from a password reset email. If you do come from a password reset email, please make sure you used the full URL provided."
-      send_instructions: "You will receive an email with instructions on how to reset your password in a few minutes."
-      send_paranoid_instructions: "If your email address exists in our database, you will receive a password recovery link at your email address in a few minutes."
-      updated: "Your password has been changed successfully. You are now signed in."
-      updated_not_active: "Your password has been changed successfully."
+      no_token: "Oops! You can’t reset your password without the special link in your email."
+      send_instructions: "If the email matches, you’ll get a link to reset your password shortly."
+      send_paranoid_instructions: "If the email is in our system, a reset link is headed your way."
+      updated: "Nice! Your password’s been changed and you’re logged in."
+      updated_not_active: "Your password’s been changed. You can log in once your account is active."
+
     registrations:
-      destroyed: "Bye! Your account has been successfully cancelled. We hope to see you again soon."
-      signed_up: "Welcome! You have signed up successfully."
-      signed_up_but_inactive: "You have signed up successfully. However, we could not sign you in because your account is not yet activated."
-      signed_up_but_locked: "You have signed up successfully. However, we could not sign you in because your account is locked."
-      signed_up_but_unconfirmed: "A message with a confirmation link has been sent to your email address. Please follow the link to activate your account."
-      update_needs_confirmation: "You updated your account successfully, but we need to verify your new email address. Please check your email and follow the confirmation link to confirm your new email address."
-      updated: "Your account has been updated successfully."
-      updated_but_not_signed_in: "Your account has been updated successfully, but since your password was changed, you need to sign in again."
+      destroyed: "Goodbye for now! Your account’s been deleted. Come back anytime!"
+      signed_up: "Welcome aboard! You're signed up and ready to go."
+      signed_up_but_inactive: "Signed up! We just need to activate your account first."
+      signed_up_but_locked: "You signed up, but your account is currently locked."
+      signed_up_but_unconfirmed: "Check your email for a confirmation link to get started."
+      update_needs_confirmation: "Update successful! Just confirm your new email to finish up."
+      updated: "All changes saved. You're good to go!"
+      updated_but_not_signed_in: "Changes saved! Since your password changed, please sign in again."
+
     sessions:
-      signed_in: "Signed in successfully."
-      signed_out: "Signed out successfully."
-      already_signed_out: "Signed out successfully."
+      signed_in: "Welcome back!"
+      signed_out: "You’ve been logged out."
+      already_signed_out: "You were already logged out."
+
     unlocks:
-      send_instructions: "You will receive an email with instructions for how to unlock your account in a few minutes."
-      send_paranoid_instructions: "If your account exists, you will receive an email with instructions for how to unlock it in a few minutes."
-      unlocked: "Your account has been unlocked successfully. Please sign in to continue."
+      send_instructions: "You’ll get an email shortly with instructions to unlock your account."
+      send_paranoid_instructions: "If your account exists, we’ll send unlock instructions your way."
+      unlocked: "You’re back in! Your account is unlocked."
+
   errors:
     messages:
-      already_confirmed: "was already confirmed, please try signing in"
-      confirmation_period_expired: "needs to be confirmed within %{period}, please request a new one"
-      expired: "has expired, please request a new one"
-      not_found: "not found"
-      not_locked: "was not locked"
+      already_confirmed: "That email’s already confirmed. Try logging in."
+      confirmation_period_expired: "The link expired after %{period}. Request a new one to continue."
+      expired: "That link expired. Request a new one to try again."
+      not_found: "We couldn’t find what you’re looking for."
+      not_locked: "This account isn’t locked."
       not_saved:
-        one: "1 error prohibited this %{resource} from being saved:"
-        other: "%{count} errors prohibited this %{resource} from being saved:"
+        one: "1 error kept this %{resource} from saving:"
+        other: "%{count} errors kept this %{resource} from saving:"
